--- a/siteblog/templates/inc/_header.html
+++ b/siteblog/templates/inc/_header.html
@@ -8,16 +8,16 @@
                         </div>
                     </div>
                     <div class="col-md-10">
-<!--                        {% show_menu %}-->
-                        <div class="menu">
-                            <ul>
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">lifestyle</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Nature</a></li>
-                                <li><a href="#">photography</a></li>
-                            </ul>
-                        </div>
+                        {% show_menu %}
+<!--                        <div class="menu">-->
+<!--                            <ul>-->
+<!--                                <li class="active"><a href="#">Home</a></li>-->
+<!--                                <li><a href="#">lifestyle</a></li>-->
+<!--                                <li><a href="#">Food</a></li>-->
+<!--                                <li><a href="#">Nature</a></li>-->
+<!--                                <li><a href="#">photography</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
