--- a/siteblog/templates/inc/_footer.html
+++ b/siteblog/templates/inc/_footer.html
@@ -1,3 +1,4 @@
+{% load menu %}
 <footer class="footer">
     <div class="container">
                 <div class="row">
@@ -6,18 +7,16 @@
                             <div class="row">
                                 <div class="col-md-9">
                                     <div class="footer-menu">
-                                        <ul>
-                                            <li class="active"><a href="#">Home</a></li>
-                                            <li><a href="#">lifestyle</a></li>
-                                            <li><a href="#">Food</a></li>
-                                            <li><a href="#">Nature</a></li>
-                                            <li><a href="#">photography</a></li>
-                                        </ul>
+                                        {% show_menu 'footer-menu' %}
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="footer-icon">
-                                        <p><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></p>
+                                <div class="col-md-3 ">
+                                    <div class="footer-icon ">
+                                        <p><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
